# zephyr-esp32c5

./: CMakeLists.txt  Kconfig  prj.conf
boards/: esp32c5_devkitc_hpcore.conf  esp32c5_devkitc_hpcore.overlay  xiao_esp32c3.conf
src/: config.h  mqtt_client.c  mqtt_client.h  wifi_test.c
